--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@reduxjs/toolkit": "^1.8.6",
     "expo": "^46.0.0",
     "expo-linear-gradient": "~11.4.0",
+    "expo-updates": "~0.14.6",
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -31,5 +32,5 @@
   },
   "version": "1.0.0",
   "private": true,
-  "name": "event"
+  "name": "Leave_Tracker"
 }
